[package]
authors = ['deeper.network dev']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://deeper.network'
license = 'Unlicense'
name = 'pallet-delegating'
repository = 'https://github.com/e2chain-dev/e2-chain'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.log]
default-features = false
version = "0.4.11"

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.frame-support]
default-features = false
version = '2.0.0'

[dependencies.frame-system]
default-features = false
version = '2.0.0'

[dependencies.sp-core]
default-features = false
version = '2.0.0'

[dev-dependencies.sp-io]
default-features = false
version = '2.0.0'

[dev-dependencies.sp-runtime]
default-features = false
version = '2.0.0'

[dependencies.sp-std]
default-features = false
version = '2.0.0'

[dependencies.pallet-credit]
default-features = false
path = "../credit"
version = '2.0.0'

[dev-dependencies.node-primitives]
default-features = false
path = "../../primitives"
version = '2.0.0'

[dependencies.pallet-session]
default-features = false
version = '2.0.0'

[dependencies]
pallet-micropayment = {version = '2.0.0', default-features =false, path = "../micropayment"}

[dev-dependencies]
pallet-balances = { version = "2.0.0", path = "../balances", default-features = false}
pallet-timestamp = { version = "2.0.0", default-features = false}
pallet-deeper-node = {version = '2.0.0', default-features =false, path = "../deeper-node"}

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'pallet-credit/std',
    'sp-core/std',
    'pallet-session/std',
    'pallet-micropayment/std',
]
