[package]
name = "pallet-erc20"
description = 'multi-erc20 pallet'
edition = '2018'
authors = ["deeper dev"]
version = '2.0.0'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'


[dependencies.frame-support]
default-features = false
version = '2.0.0'

[dependencies.frame-system]
default-features = false
version = '2.0.0'


[dev-dependencies.sp-core]
default-features = false
version = '2.0.0'

[dev-dependencies.sp-io]
default-features = false
version = '2.0.0'

[dependencies.sp-runtime]
default-features = false
version = '2.0.0'



[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
