[package]
name = "pallet-micropayment"
description = 'deeper micropayment pallet'
edition = '2018'
authors = ["deeper dev"]
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'


[dependencies.frame-support]
default-features = false
version = '2.0.0'

[dependencies.frame-system]
default-features = false
version = '2.0.0'


[dependencies.sp-core]
default-features = false
version = '2.0.0'

[dependencies.sp-io]
default-features = false
version = '2.0.0'

[dependencies.sp-runtime]
default-features = false
version = '2.0.0'

[dependencies.log]
default-features = false
version = "0.4.11"

[dependencies]
blake2-rfc = { version = "0.2.18", default-features = false }
pallet-balances = { version = "2.0.0", default-features = false, path = "../balances"}
pallet-timestamp = { version = "2.0.0", default-features = false}
node-primitives = {version = '2.0.0', default-features = false, path = "../../primitives"}

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-core/std',
    'log/std',
    'pallet-timestamp/std',
    'node-primitives/std',
]
