[package]
authors = ['Anonymous']
edition = '2018'
name = 'pallet-micropayment'
version = "3.0.0"
homepage = "https://deeper.network"
repository = "https://github.com/deeper-chain/deeper-chain"
description = "deeper micropayment pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { default-features = false, version = "0.4.11" }
blake2-rfc = { version = "0.2.18", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = {default-features = false, git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
frame-system = {default-features = false, git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
pallet-timestamp = {default-features = false, git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
node-primitives = {version = '2.0.0', default-features = false, path = "../../primitives"}
pallet-balances = { version = "3.0.0", default-features = false, path = "../balances"}
sp-core = {default-features = false, git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-io = {default-features = false, git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-std = {default-features = false, git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
# Optional imports for benchmarking
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "v3.0.0", optional = true }

[dev-dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
serde = { version = "1.0.101" }
hex-literal = "0.3.1"

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-io/std',
    'sp-runtime/std',
    'sp-core/std',
	'sp-std/std',
	'pallet-timestamp/std',
    'node-primitives/std',
	'pallet-balances/std',
	'log/std',
]
runtime-benchmarks = [
	"frame-benchmarking",
]