[package]
authors = ['Anonymous']
edition = '2021'
name = 'pallet-micropayment'
version = "3.0.0"
homepage = "https://deeper.network"
repository = "https://github.com/deeper-chain/deeper-chain"
description = "deeper micropayment pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { workspace = true, optional = true }
log = { workspace = true }
blake2-rfc = { workspace = true }
codec = { workspace = true, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { workspace = true, features = [
	"derive",
] }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-timestamp = { workspace = true }
node-primitives = { workspace = true }
pallet-balances = { workspace = true }
pallet-uniques = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Optional imports for benchmarking
frame-benchmarking = { workspace = true, optional = true }
hex-literal = { workspace = true }

[dev-dependencies]
frame-benchmarking = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
pallet-treasury = { workspace = true }
pallet-credit = { workspace = true }
pallet-deeper-node = { workspace = true }

[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-core/std',
	'sp-std/std',
	'pallet-timestamp/std',
	'node-primitives/std',
	'pallet-balances/std',
	'pallet-credit/std',
	'pallet-deeper-node/std',
	'pallet-uniques/std',
	'pallet-treasury/std',
	'log/std',
]
runtime-benchmarks = ["frame-benchmarking"]
