[package]
name = "pallet-operation"
description = 'deeper operation pallet'
edition = '2021'
authors = ["deeper dev"]
version = '3.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-support = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
frame-system = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-io = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false}
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false}
node-primitives = {version = '2.0.0', default-features = false, path = "../../primitives"}
sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
log = { version = "0.4.14", default-features = false }
sp-core = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

# Optional imports for benchmarking
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", optional = true }

[dev-dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    "scale-info/std",
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-io/std',
    'sp-std/std',
    'pallet-balances/std',
    'node-primitives/std',
    'pallet-timestamp/std',
]
runtime-benchmarks = [
	"frame-benchmarking",
]
try-runtime = ["frame-support/try-runtime"]