[package]
name = "pallet-operation"
description = 'deeper operation pallet'
edition = '2021'
authors = ["deeper dev"]
version = '3.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { workspace = true, optional = true }
codec = { workspace = true, features = [
    "derive",
    "max-encoded-len",
] }
scale-info = { workspace = true, features = [
    "derive",
] }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-io = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
node-primitives = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
log = { workspace = true }
sp-core = { workspace = true }
pallet-user-privileges = { workspace = true }
pallet-evm = { workspace = true }

# Optional imports for benchmarking
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
frame-benchmarking = { workspace = true, default-features = true }


[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    "scale-info/std",
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-core/std',
    'sp-io/std',
    'sp-std/std',
    'pallet-balances/std',
    'node-primitives/std',
    'pallet-timestamp/std',
    'pallet-user-privileges/std',
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
