[package]
name = "pallet-evm-precompile-credit"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "DISPATCH precompiles for EVM pallet."

[dependencies]
sp-core = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-io = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-support = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-evm = { default-features = false, git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v0.9.32" }
fp-evm = { default-features = false, git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v0.9.32" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-std = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
pallet-credit = { version = "3.0.0", path = "../credit", default-features = false }
node-primitives = { version = '2.0.0', default-features = false, path = "../../primitives" }
arrayref = "0.3.6"

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-evm/std",
	"fp-evm/std",
	"codec/std",
	"pallet-credit/std",
	"sp-std/std",
]
