[package]
name = "pallet-evm-precompile-credit"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "DISPATCH precompiles for EVM pallet."

[dependencies]
sp-core = { tag = "polkadot-v1.1.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-io = { tag = "polkadot-v1.1.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
frame-support = { tag = "polkadot-v1.1.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
pallet-evm = { default-features = false, git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v1.1.0" }
fp-evm = { default-features = false, git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v1.1.0" }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
sp-std = { tag = "polkadot-v1.1.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-runtime = { tag = "polkadot-v1.1.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }

frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
pallet-credit = { version = "3.0.0", path = "../credit", default-features = false }
node-primitives = { version = '2.0.0', default-features = false, path = "../../primitives" }
arrayref = "0.3.6"

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-evm/std",
	"fp-evm/std",
	"codec/std",
	"pallet-credit/std",
	"sp-std/std",
	"sp-runtime/std",
]
