[package]
name = "pallet-evm-precompile-credit"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "DISPATCH precompiles for EVM pallet."

[dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
frame-support = { workspace = true }
pallet-evm = { workspace = true }
fp-evm = { workspace = true }
codec = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }

frame-system = { workspace = true }
pallet-credit = { workspace = true }
node-primitives = { workspace = true }
arrayref = { workspace = true }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-evm/std",
	"fp-evm/std",
	"codec/std",
	"pallet-credit/std",
	"sp-std/std",
	"sp-runtime/std",
]
