[package]
name = "pallet-staking-with-credit"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet staking"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
static_assertions = "1.1.0"
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-npos-elections = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-io ={ default-features = false, git = "https://github.com/paritytech/substrate", tag = "v3.0.0"  }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-staking = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "v3.0.0"  }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "v3.0.0"  }
pallet-session = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "v3.0.0" , features = ["historical"] }
pallet-authorship = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "v3.0.0"  }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "v3.0.0"  }
pallet-delegating = { default-features = false, path = "../delegating", version = "3.0.0" }

# Optional imports for benchmarking
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "v3.0.0", optional = true }
rand_chacha = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0"  }
sp-storage = {git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-tracing = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
pallet-balances = { version = "3.0.0", path = "../balances" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
pallet-staking-reward-curve = { version = "3.0.0",  path = "../staking-with-credit/reward-curve" }
substrate-test-utils = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0"}
frame-benchmarking = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
rand_chacha = { version = "0.2" }
parking_lot = "0.11.1"
hex = "0.4"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-npos-elections/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"frame-system/std",
	"pallet-authorship/std",
	"sp-application-crypto/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"rand_chacha",
]
