[package]
name = "pallet-staking"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/polkadot-sdk/"
description = "FRAME pallet staking"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
static_assertions = "1.1.0"
serde = { version = "1.0.188", default-features = false, features = ["alloc", "derive"]}
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.5.0", default-features = false, features = [
	"derive",
] }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-npos-elections = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-staking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
pallet-session = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", features = [
	"historical",
] }
pallet-authorship = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
pallet-operation = { default-features = false, path = "../operation", version = "3.0.0" }
pallet-deeper-node = { version = '3.0.0', default-features = false, path = "../deeper-node" }
pallet-uniques = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
node-primitives = { version = '2.0.0', default-features = false, path = "../../primitives" }
log = { default-features = false, version = "0.4.11" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
pallet-micropayment = { version = '3.0.0', default-features = false, path = "../micropayment" }
pallet-credit = { version = '3.0.0', default-features = false, path = "../credit" }
pallet-credit-accumulation = { default-features = false, path = "../credit-accumulation" }
pallet-evm = { default-features = false, git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v1.1.0" }

# Optional imports for benchmarking
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", optional = true }
rand_chacha = { version = "0.2", default-features = false, optional = true }
hex-literal = { version = "0.3.1", optional = true }
pallet-user-privileges = { version = '4.0.0', default-features = false, path = "../user-privileges", optional = true }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
pallet-user-privileges = { version = '4.0.0', default-features = false, path = "../user-privileges" }
pallet-credit-accumulation = { default-features = false, path = "../credit-accumulation" }
rand_chacha = { version = "0.2" }
parking_lot = "0.11.1"
#hex = "0.4"

[features]
default = ["std"]
std = [
	"serde/std",
	"codec/std",
	"sp-std/std",
	"scale-info/std",
	"sp-npos-elections/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"frame-system/std",
	"pallet-authorship/std",
	"sp-application-crypto/std",
	"node-primitives/std",
	"pallet-deeper-node/std",
	"pallet-balances/std",
	"pallet-micropayment/std",
	"pallet-uniques/std",
	"pallet-credit/std",
	"pallet-user-privileges/std",
	"pallet-credit-accumulation/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"rand_chacha",
	"hex-literal",
	"pallet-user-privileges",
]
